@@ -87,6 +87,10 @@ Ignored for all other font formats.
 Don't display named instances of variation fonts.
 .
 .TP
+.BI \-k \ keys
+Emulate sequence of keystrokes upon start up.
+.
+.TP
 .B \-v
 Show version.
 .
