@@ -79,6 +79,10 @@ Use
 for rendering.
 .
 .TP
+.BI \-k \ keys
+Emulate sequence of keystrokes upon start up.
+.
+.TP
 .B \-v
 Show version.
 .
