@@ -99,6 +99,10 @@ depending on the implemented subpixel rendering method.
 Preload file in memory to simulate memory-mapping.
 .
 .TP
+.BI \-k \ keys
+Emulate sequence of keystrokes upon start up.
+.
+.TP
 .B \-v
 Show version.
 .
