@@ -1,8 +1,18 @@
+2018-05-22  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	[ftview,ftstring,ftgrid] Add keystroke emulator.
+
+	* src/{ftview,ftstring,ftgrid}.c
+	(parse_cmdline): New option to pass keystroke sequence.
+	(Process_Event): Consume keystrokes from buffer before listening.
+	(usage): Document it.
+	* src/{ftview,ftstring,ftgrid}.1: Document it.
+
 2018-05-21  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	Prepare for scripting.
 
-	* src/{ftview.c,ftstring.c,ftgrid.c,ftmulti.c,ftgamma.c} 
+	* src/{ftview.c,ftstring.c,ftgrid.c,ftmulti.c,ftgamma.c}
 	(main, Process_Event): Consolidate event handling.
 
 2019-04-28  Werner Lemberg  <wl@gnu.org>
